--- a/package.json
+++ b/package.json
@@ -1,19 +1,44 @@
 {
-  "name": "jarvis-bot",
-  "version": "0.0.1",
-  "description": "telegram bot",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/josete89/jarvis-bot.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/josete89/jarvis-bot/issues"
-  },
-  "homepage": "https://github.com/josete89/jarvis-bot#readme"
+	"name": "jarvis bot",
+	"version": "0.1.0",
+	"description": "",
+	"repository": "",
+	"license": "MIT",
+	"scripts": {
+		"clean": "rimraf dist",
+		"build": "npm run clean && tsc --pretty",
+		"test": "npm run build && mocha --compilers ts:ts-node/register --recursive test/**/*-spec.ts",
+		"watch": "npm run build -- --watch",
+		"watch:test": "npm run test -- --watch"
+	},
+	"author": {
+		"name": "josete89",
+		"email": "josete_zgz_89@hotmail.com"
+	},
+	"main": "dist/bin/app.js",
+	"typings": "dist/bin/app.d.ts",
+	"bin": {
+		"jarvis-bot": "bin/jarvis-bot"
+	},
+	"files": [
+		"bin",
+		"dist"
+	],
+	"devDependencies": {
+		"@types/chai": "^4.0.0",
+		"@types/commander": "^2.3.31",
+		"@types/mocha": "^2.2.39",
+		"@types/node": "^7.0.5",
+		"@types/sinon": "^2.3.0",
+		"chai": "^4.0.1",
+		"mocha": "^3.2.0",
+		"rimraf": "^2.6.1",
+		"sinon": "^2.3.2",
+		"ts-node": "^3.0.4",
+		"typescript": "^2.2.1"
+	},
+	"dependencies": {
+		"commander": "^2.9.0",
+		"node-telegram-bot-api": "^0.53.0"
+	}
 }
